# employee-management-django

./: README.md  pyproject.toml
employee_management/: models.py  settings.py  urls.py
employee_management/migrations/: 0001_initial.py
website/: forms.py  urls.py  views.py
website/templates/website/: cria.html  exclui.html  index.html  lista.html
website/templates/website/_layouts/: base.html
