[tool.poetry]
name = "employee-management-django"
version = "0.1.0"
description = ""
authors = ["Henriquelima1984 <henriquecorreia100@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"
django-widget-tweaks = "^1.4.12"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.3"
django-heroku = "^0.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
